--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">ShortsTrack</string>
     <string name="full_name">full name</string>
+    <string name="home">Home</string>
+    <string name="save">saved</string>
+    <string name="track">track</string>
+    <string name="live">live</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
